[package]
name = "oort_compiler"
version = "0.36.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.69"
tokio = { version = "1", features = ["macros", "process"] }
tempdir = "0.3.7"
glob = "0.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "compiler"
harness = false
