[package]
name = "oort_compiler"
version = "0.79.3"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.83"
tempdir = "0.3.7"
glob = "0.3.1"
log = "0.4.21"
lazy_static = "1.4.0"
regex = "1.10.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "compiler"
harness = false
