[package]
name = "oort_compiler"
version = "0.80.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.77"
tempdir = "0.3.7"
glob = "0.3.1"
log = "0.4.20"
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "compiler"
harness = false
