[package]
name = "oort_simulator"
version = "0.55.0"
edition = "2021"
authors = ["Rich Lane"]
description = "A space fleet programming game."
license = "GPL-3.0-or-later"
repository = "https://github.com/rlane/oort3"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8.2"
getrandom = { version = "0.2.10", features = ["js"] }
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
oorandom = "11.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
rapier2d-f64 = { version = "0.17.2", features = ["wasm-bindgen"] }
serde = { version = "1.0.188", features = ["derive"] }
instant = "0.1.12"
oort_api = { path = "../api", features = ["serde"] }
wasmer = { version = "4.1.0", default-features = false }
tar = "0.4.40"
libflate = "2.0.0"
walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
bytes = { version = "1.4.0", features = ["serde"] }
static_aabb2d_index = { version = "1.0.0", features = ["unsafe_optimizations"] }
bitvec = "1.0.1"
wide = "0.7.11"

[target.'cfg(target_arch = "x86_64")'.dependencies]
wasmer-compiler-singlepass = { version = "4.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"

[dev-dependencies]
bincode = "1.3.3"
rayon = "1.7.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
test-log = "0.2.12"
env_logger = "0.10.0"
serde_json = "1.0.105"
approx = "0.5.1"
wabt = "0.10.0"

[features]
default = ["sys"]
sys = ["wasmer/sys-default"]
js = ["wasmer/js", "wasmer/wat", "wasmer/std"]
precompile = []

[[bench]]
name = "bullets"
harness = false

[[bench]]
name = "missiles"
harness = false

[[bench]]
name = "tutorials"
harness = false

[[bench]]
name = "fleet"
harness = false

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "serialization"
harness = false
