[package]
name = "oort-native-runner"
version = "0.84.0"
publish = false
edition = "2021"

[dependencies]
oort_simulator = { path = "../../shared/simulator" }
oort_api = { path = "../../shared/api" }
oort_ai = { path = "../../shared/ai" }
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
